--- a/src/components/authentication/Login/Login.css
+++ b/src/components/authentication/Login/Login.css
@@ -10,4 +10,22 @@
 .link-forgot-password a { text-decoration: underline; }
 .link-forgot-password a:hover { text-decoration: none; }
 .link-forgot-password a:active { text-decoration: underline; }
-.link-forgot-password a:visited {}
+.link-forgot-password a:visited { text-decoration: underline; }
+.divider-container {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.icon {
+  margin-right: 5px;
+}
+.icon--facebook {
+  width: 20px;
+}
+.icon--google {
+  width: 20px;
+}
+.form-row-split {
+  grid-template-columns: 1fr 1fr;
+  display: grid;
+  grid-column-gap: 10px;
+}
